--- a/index.html
+++ b/index.html
@@ -179,49 +179,121 @@
       color: white;
       cursor: pointer;
     }
-    .checkout-section {
-      margin-top: 3rem;
-      padding: 2rem;
-      background: var(--white);
-      border-radius: 12px;
-      max-width: 600px;
+    .contact-form {
+      margin-top: 2rem;
+      text-align: left;
+      max-width: 400px;
       margin-left: auto;
       margin-right: auto;
     }
-    .checkout-section input {
+    .contact-form input, .contact-form textarea {
       width: 100%;
-      padding: 0.5rem;
-      margin-bottom: 1rem;
-      border-radius: 6px;
+      padding: 0.6rem;
+      margin: 0.5rem 0;
       border: 1px solid #ccc;
+      border-radius: 6px;
     }
-    .checkout-section button {
+    .contact-form button {
       background-color: var(--accent-color);
       color: white;
-      padding: 0.8rem 1.5rem;
+      padding: 0.7rem 1.5rem;
       border: none;
       border-radius: 8px;
       font-weight: bold;
       cursor: pointer;
     }
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25d366;
+      color: white;
+      border-radius: 50%;
+      padding: 15px;
+      font-size: 24px;
+      z-index: 1000;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <!-- header and product sections unchanged -->
+  <header>
+    <button class="toggle-mode" onclick="toggleMode()">🌓</button>
+    <img src="logo.png" alt="Tanish Gift of Gratitude Logo" />
+    <h1>Tanish Gift of Gratitude</h1>
+    <p>Gratitude, Handcrafted with Love</p>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#products">Products</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-  <section class="checkout-section">
-    <h2>Order Summary & Payment</h2>
-    <div id="order-summary"></div>
-    <form onsubmit="return submitOrder()">
-      <input type="text" id="customer-name" placeholder="Your Full Name" required />
-      <input type="email" id="customer-email" placeholder="Your Email" required />
-      <input type="text" id="customer-address" placeholder="Delivery Address" required />
-      <input type="text" id="customer-phone" placeholder="Phone Number" required />
-      <button type="submit">Confirm & Pay</button>
-    </form>
-  </section>
+  <main>
+    <h2>Welcome to Our World of Handcrafted Gifts</h2>
+    <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
+    <div class="cta">
+      <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
+    </div>
 
-  <!-- footer unchanged -->
+    <section id="products" class="products">
+      <div class="product" data-name="Custom Photo Frame" data-price="499">
+        <img src="sample1.jpg" alt="Custom Photo Frame" />
+        <h3>Custom Photo Frame</h3>
+        <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
+        <p><strong>Price:</strong> ₹499</p>
+        <p>⭐️⭐️⭐️⭐️☆ (12 reviews)</p>
+        <button onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="product" data-name="Mini Scrapbook" data-price="299">
+        <img src="sample2.jpg" alt="Mini Scrapbook" />
+        <h3>Mini Scrapbook</h3>
+        <p>A pocket-sized book filled with love, perfect for gifting.</p>
+        <p><strong>Price:</strong> ₹299</p>
+        <p>⭐️⭐️⭐️⭐️⭐️ (8 reviews)</p>
+        <button onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="product" data-name="Name Plate Frame" data-price="599">
+        <img src="sample3.jpg" alt="Name Plate Frame" />
+        <h3>Name Plate Frame</h3>
+        <p>Elegant name plate designs with floral or wooden themes.</p>
+        <p><strong>Price:</strong> ₹599</p>
+        <p>⭐️⭐️⭐️⭐️☆ (15 reviews)</p>
+        <button onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="product" data-name="Anniversary Gift Frame" data-price="699">
+        <img src="sample4.jpg" alt="Anniversary Gift Frame" />
+        <h3>Anniversary Gift Frame</h3>
+        <p>Celebrate love with a personalized frame for special occasions.</p>
+        <p><strong>Price:</strong> ₹699</p>
+        <p>⭐️⭐️⭐️⭐️⭐️ (10 reviews)</p>
+        <button onclick="addToCart(this)">Add to Cart</button>
+      </div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Indraja Balla</h2>
+      <p>Email: <a href="mailto:indrajapolasa@gmail.com">indrajapolasa@gmail.com</a></p>
+      <form action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST" class="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </section>
+  </main>
+
+  <div class="cart-icon" onclick="toggleCart()">🛒 (<span id="cart-count">0</span>)</div>
+  <div class="cart-modal" id="cart-modal">
+    <h3>Your Cart</h3>
+    <ul id="cart-items"></ul>
+    <p><strong>Total:</strong> ₹<span id="cart-total">0</span></p>
+    <button onclick="clearCart()">Clear Cart</button>
+    <button onclick="toggleCart()">Close</button>
+  </div>
+
+  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">💬</a>
+  <footer><p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p></footer>
 
   <script>
     const cart = {};
@@ -230,6 +302,7 @@
       const product = button.closest('.product');
       const name = product.getAttribute('data-name');
       const price = parseInt(product.getAttribute('data-price'));
+
       if (cart[name]) {
         cart[name].qty += 1;
       } else {
@@ -245,34 +318,23 @@
       items.innerHTML = '';
       let totalCount = 0;
       let totalPrice = 0;
+
       for (const name in cart) {
         const item = cart[name];
         const li = document.createElement('li');
-        li.innerHTML = `${name} - ₹${item.price} × ${item.qty}` +
-          `<div class="qty-btns">
+        li.innerHTML = 
+          ${name} - ₹${item.price} × ${item.qty}
+          <div class="qty-btns">
             <button onclick="changeQty('${name}', -1)">-</button>
             <button onclick="changeQty('${name}', 1)">+</button>
-          </div>`;
+          </div>;
         items.appendChild(li);
         totalCount += item.qty;
         totalPrice += item.qty * item.price;
       }
+
       count.innerText = totalCount;
       total.innerText = totalPrice;
-      generateOrderSummary();
-    }
-
-    function generateOrderSummary() {
-      const summary = document.getElementById('order-summary');
-      if (!summary) return;
-      summary.innerHTML = '<h3>Items:</h3>';
-      let totalPrice = 0;
-      for (const name in cart) {
-        const item = cart[name];
-        summary.innerHTML += `<p>${name} - ₹${item.price} × ${item.qty}</p>`;
-        totalPrice += item.price * item.qty;
-      }
-      summary.innerHTML += `<p><strong>Total Price: ₹${totalPrice}</strong></p>`;
     }
 
     function changeQty(name, delta) {
@@ -294,12 +356,6 @@
 
     function toggleMode() {
       document.body.classList.toggle('dark');
-    }
-
-    function submitOrder() {
-      alert('Thank you for your order! We will contact you soon.');
-      clearCart();
-      return false;
     }
   </script>
 </body>
